	* Attempt to fix issue whereby moder perl // defined test still not working perl
	* Attempt to fix issue whereby Makefile will not properly generate the latest README file

3944	2013-03-24	Kevin Kamel <kamelkev@mailermailer.com>
	* Add generalized at-rule support to CSS::Inliner::Parser, @media support is reimplemented
	* Provide granularity for retrieving rules by rule name, exa qualified, @import, @media, etc
	* Attempt to improve whitespace handling when printing out a stylesheet from CSS::Inliner::Parser
        * Abandon using tabs in written out css, update tests to reflect the change
	* Add support for including at-rule when printing out a stylesheet from CSS::Inliner::Parser
        * Add tests for ensuring that at-rule are working
	* Fix up code style whitespace issues, add associated tests for checking it

3945	2013-04-25	Kevin Kamel <kamelkev@mailermailer.com>
	* Updated embedded test, which references a remote uri that was no longer accessible

3948	2014-09-02	Kevin Kamel <kamelkev@mailermailer.com>
	* Updated handling of pseudo-classes
		- correct issue raised in CPAN RT96413, errors incorrectly bubbling from HTML::Query
		- update regex to properly target all unsupported pseudo-selectors
		- update regex to skip over CSS3 style pseudo-selectors as well as CSS2
		- update tests to properly exercise associated changes
	* Rename test psuedo.t to pseudo.t (spelling)
	* Bump up HTML::Query requirement to 0.09

3957	2015-05-15	Kevin Kamel <kamelkev@mailermailer.com>
	* Add support for an argument to the Inliner constructor to override the default set of entities
		- resolve feature request raised in CPAN RT100857
		- add test to validate basic behavior
	* Fix issues within pod documentation
	* Added patch provided by sixtease@cpan.org within CPAN RT99934
		- Resolves improper !important rule handling
		- Adds test for validating proper !important rule handling
	* Update copyright to 2015 throughout project